--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,8 @@ stages:
 before_script:
 - export GRADLE_USER_HOME=$(pwd)/.gradle
 - chmod +x ./gradlew
+- apt-get --quiet update --yes
+- apt-get --quiet install --yes wget
 
 cache:
   key: ${CI_PROJECT_ID}
@@ -20,12 +22,12 @@ build:
   artifacts:
     paths:
     - app/build/outputs/apk/app-debug.apk
-    
+
 unitTests:
   stage: test
   script:
   - ./gradlew test
-  
+
 functionalTests:
   stage: test
   script:
