--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,5 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation "androidx.appcompat:appcompat:1.2.0"
 }
